# trustification

deploy/compose/: .env
deploy/k8s/: values-ocp-no-aws.yaml
deploy/k8s/charts/trustification/: values.schema.json  values.schema.yaml  values.yaml
deploy/k8s/charts/trustification/templates/helpers/: _hosts.tpl
deploy/k8s/charts/trustification/templates/init/dataset/: 020-Job.yaml
deploy/k8s/charts/trustification/templates/services/report/: 010-Secret.yaml  020-ConfigMap-auth.yaml  030-Deployment.yaml  040-Service.yaml  050-Ingress.yaml  060-Deployment.yaml
spog/api/src/endpoints/: license.rs
spog/api/src/license/: license_exporter.rs
spog/ui/: Cargo.toml  Trunk.Dev.toml
spog/ui/crates/components/: Cargo.toml
spog/ui/crates/components/src/: backend.rs
spog/ui/mock-server/: Cargo.toml  start-mock-server.sh
spog/ui/mock-server/mock-data/: config.json  search_sbom.json
spog/ui/mock-server/src/: main.rs
